--- a/src/components/NominationPanel.scss
+++ b/src/components/NominationPanel.scss
@@ -21,13 +21,13 @@
     margin: 1rem 10px;
     font-size: 1em;
     font-weight: 600;
-    text-align: justify;
+    text-align: left;
     align-items: center;
   }
 
   .counter-text {
     margin-left: 10px;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     color: $primary-background-color;
   }
 
