--- a/src/components/SearchPanel.scss
+++ b/src/components/SearchPanel.scss
@@ -8,7 +8,8 @@
   width: 60vw;
   margin-top: 3.5em;
   h2 {
-    color: rgb(162, 160, 160);
+    // color: rgb(162, 160, 160);
+    color: $color-primary;
     font-weight: 500;
     font-size: 1.8rem;
 
