--- a/src/components/SearchResultsPanel.scss
+++ b/src/components/SearchResultsPanel.scss
@@ -22,11 +22,11 @@
     margin: 1rem 10px;
     font-size: 1em;
     font-weight: 600;
-    text-align: justify;
+    text-align: left;
     align-items: center;
   }
 
   .highlighted-text {
-    color: $primary-font;
+    color: $primary-background-color;
   }
 }
