--- a/src/styles/mediaQueries.scss
+++ b/src/styles/mediaQueries.scss
@@ -41,7 +41,7 @@
   }
 
   button {
-    height: 1.4rem;
+    height: 1.7rem;
     width: 5rem;
     font-size: 14px;
   }
@@ -85,7 +85,7 @@
         display: flex;
         padding: 5px;
         font-size: 1rem;
-        text-align: justify;
+        text-align: left;
       }
       .btn {
         align-content: center;
@@ -107,7 +107,7 @@
       font-size: 1rem;
       padding: 5px;
       font-size: 1rem;
-      text-align: justify;
+      text-align: left;
     }
   }
 }
